@@ -15,6 +15,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
 import java.util.Arrays;
 import java.util.List;
 
@@ -29,37 +30,39 @@ public class SecurityConfiguration {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Usa la configuración de CORS
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Permite solicitudes OPTIONS
-
-                        .requestMatchers("/api/v1/auth/**").permitAll()
-                        .requestMatchers("/api/v1/admin/login").permitAll()
-                        .requestMatchers("/api/features/**").permitAll()
-                        .requestMatchers("/api/v1/users/**").permitAll()
-                        .requestMatchers("/api/price-ranges/**").permitAll()
-                        .requestMatchers("/api/v1/admin/**").hasRole("ADMIN")
-                        .anyRequest().permitAll()
+                        .requestMatchers("/api/v1/auth/**").permitAll() // Permite acceso a rutas de autenticación
+                        .requestMatchers("/api/v1/admin/login").permitAll() // Permite acceso al login de administrador
+                        .requestMatchers("/api/features/**").permitAll() // Permite acceso a rutas de features
+                        .requestMatchers("/api/v1/users/**").permitAll() // Permite acceso a rutas de usuarios
+                        .requestMatchers("/api/price-ranges/**").permitAll() // Permite acceso a rutas de price-ranges
+                        .requestMatchers("/api/v1/admin/**").hasRole("ADMIN") // Restringe acceso a rutas de administrador
+                        .anyRequest().authenticated() // Todas las demás rutas requieren autenticación
                 )
-                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authenticationProvider(authenticationProvider)
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Configura sesiones sin estado
+                .authenticationProvider(authenticationProvider) // Configura el proveedor de autenticación
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class); // Añade el filtro JWT
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "https://pi-dh-infradeploy-backend-production.up.railway.app"));
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:5173", // Frontend local
+                "https://pi-dh-infradeploytest-production.up.railway.app" // Frontend en Railway
+        ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type")); // Expone los headers necesarios
+        configuration.setAllowCredentials(true); // Permite credenciales
+        configuration.setMaxAge(3600L); // Configura el tiempo máximo de caché para las respuestas de preflight
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // Aplica la configuración a todas las rutas
         return source;
     }
 }
